[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio={version="1.40",feature=["full"]}
mini-redis="0.4"
bytes="1"
serde={version="1.0",features=["derive"]}
serde_json="1"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[[example]]
name="get-redis"
path="examples/get-redis.rs"

[[example]]
name="hello-myredis"
path="examples/hello-myredis/main.rs"

[[bin]]
name="mini_redis_start"
path="src/bin/server.rs"

[[bin]]
name="mini_redis_client"
path="src/bin/client.rs"